--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,9 @@ pyqtgraph==0.10.0
 scikit_learn==0.19.0
 scipy==1.0.0rc1
 seaborn==0.8.1
-simplejson==2.6.2
+# Commented out since problems with installing it via pip
+# Install manually if not already done
+# simplejson==2.6.2
 tabulate==0.7.5
 tqdm==4.8.4
 # NOTE: htmresearch_core Should be version locked before creating new release
